# wasm-module-bot

./: .gitignore  AGETNT.md  README.md
docs/: README.md  internal-architecture.md  plugin-api.md  plugin-development.md
host/: .env.example  package.json  pnpm-lock.yaml  tsconfig.json
host/prompt/: agent_system_prompt.md  session_summary_compat.md
host/src/: authorize.ts  config-command.ts  effect-executor.ts  effect-results.ts  main.ts  module-command.ts  plugin-api-validation.ts  plugin-registry.ts  plugin-store.ts  triggers.ts  wasm-plugin.ts
host/src/agent/: execute.ts  memory.ts  store.ts  summarizer.ts  tools.ts
plugins/builtin/agent/: Cargo.toml
plugins/builtin/agent-tools/: Cargo.toml
plugins/builtin/agent-tools/src/: lib.rs
plugins/builtin/agent/src/: lib.rs
plugins/builtin/discord_history/: Cargo.toml
plugins/builtin/discord_history/src/: lib.rs
plugins/builtin/session_control/: Cargo.toml
plugins/builtin/session_control/src/: lib.rs
plugins/builtin/status/: Cargo.toml
plugins/builtin/status/src/: lib.rs
plugins/crates/modulebot-plugin-api/: Cargo.toml
plugins/crates/modulebot-plugin-api/src/: capability.rs  lib.rs  slash.rs  types.rs  wasm_abi.rs
plugins/crates/patchouli-plugin-api/: Cargo.toml
plugins/crates/patchouli-plugin-api/src/: capability.rs  codec.rs  lib.rs  slash.rs  types.rs  wasm_abi.rs
plugins/extra/joke/: Cargo.toml
plugins/extra/joke-interceptor/: Cargo.toml
plugins/extra/joke-interceptor/src/: lib.rs
plugins/extra/joke/src/: lib.rs
