[package]
name = "modulebot-plugin-api"
version = "0.1.0"
edition = "2021"

[features]
ts-export = ["dep:ts-rs"]

[[bin]]
name = "export_ts"
required-features = ["ts-export"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "12.0", optional = true }
